--- a/example/package.json
+++ b/example/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "example",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-dom": "18.2.0",
-    "react-native-web": "~0.18.10"
+    "expo": "^44.0.0",
+    "expo-updates": "~0.11.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "@expo/webpack-config": "^0.17.2",
-    "babel-loader": "^8.1.0"
+    "@expo/ngrok": "^4.1.0",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "babel-preset-expo": "9.0.2",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
