--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     /* Specify library files to be included in the compilation. */
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-    "importsNotUsedAsValues": "error",
+    "importsNotUsedAsValues": "remove",
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
