--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -7,7 +7,7 @@
       "esnext"
     ],
     "moduleResolution": "node",
-    "noEmit": true,
+    //    "noEmit": true,
     "skipLibCheck": false,
     "resolveJsonModule": true
   },
